--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
         <header>
@@ -22,10 +24,11 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="location">אזור מגורים</label>
-                    <select id="location" name="location" required>
-                        <option value="" disabled selected>טוען אזורים...</option>
-                    </select>
+                    <label>בחר אזורי מגורים (ניתן לבחור יותר מאחד):</label>
+                    <div id="locations-container" class="locations-grid">
+                        <!-- Checkboxes will be injected here -->
+                        <div class="loading">טוען אזורים...</div>
+                    </div>
                 </div>
 
                 <button type="submit">הרשמה להתראות</button>
@@ -39,4 +42,5 @@
     </div>
     <script src="app.js"></script>
 </body>
+
 </html>
