--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
                     </div>
                 </div>
 
-                <button type="submit">הרשמה להתראות</button>
+                <button type="submit" id="submitBtn">הרשמה להתראות</button>
             </form>
             <div id="message" class="message"></div>
         </main>
